@@ -1,25 +1,27 @@
 package seedu.address.testutil;
 
+import static seedu.address.commons.util.DateUtil.parseToDate;
+
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import seedu.address.model.student.Name;
 import seedu.address.model.student.Phone;
 import seedu.address.model.student.School;
-import seedu.address.model.student.SchoolType;
 import seedu.address.model.student.Student;
 import seedu.address.model.student.Year;
+import seedu.address.model.student.academic.Academic;
+import seedu.address.model.student.academic.Attendance;
+import seedu.address.model.student.academic.Feedback;
 import seedu.address.model.student.academic.exam.Exam;
 import seedu.address.model.student.academic.exam.Score;
-import seedu.address.model.student.admin.Admin;
+import seedu.address.model.student.academic.question.Question;
+import seedu.address.model.student.academic.question.UnsolvedQuestion;
 import seedu.address.model.student.admin.ClassTime;
 import seedu.address.model.student.admin.ClassVenue;
 import seedu.address.model.student.admin.Detail;
 import seedu.address.model.student.admin.Fee;
 import seedu.address.model.student.admin.PaymentDate;
-import seedu.address.model.student.question.Question;
-import seedu.address.model.student.question.UnsolvedQuestion;
 import seedu.address.model.util.SampleDataUtil;
 
 /**
@@ -30,10 +32,9 @@ public class StudentBuilder {
     public static final String DEFAULT_NAME = "Alice Pauline";
     public static final String DEFAULT_PHONE = "85355255";
     public static final String DEFAULT_SCHOOL = "NUS High School";
-    public static final SchoolType DEFAULT_SCHOOL_TYPE = SchoolType.SECONDARY;
-    public static final Integer DEFAULT_SCHOOL_LEVEL = 4;
+    public static final String DEFAULT_YEAR = "Sec 4";
     public static final String DEFAULT_CLASS_VENUE = "311, Clementi Ave 2, #02-25";
-    public static final String DEFAULT_CLASS_TIME = "1 1500-1700";
+    public static final String DEFAULT_CLASS_TIME = "1 2100-2200";
     public static final String DEFAULT_FEE = "21";
     public static final String DEFAULT_PAYMENT_DATE = "21/05/2020";
     public static final String DEFAULT_ADDITIONAL_DETAILS_MONEY = "owesMoney";
@@ -41,7 +42,12 @@ public class StudentBuilder {
     public static final String DEFAULT_QUESTION_NEWTON = "What is Newton's Second Law?";
     public static final String DEFAULT_QUESTION_MATH = "How do you inverse a matrix?";
     public static final String DEFAULT_SOLUTION = "Read your textbook";
-    public static final Exam DEFAULT_EXAM_MYE = new Exam("Mid Year 2020", "26/7/2020", new Score("26/50"));
+    public static final Exam DEFAULT_EXAM_FYE = new Exam("End of Year Examination 2020",
+            parseToDate("07/11/2020"), new Score("50/100"));
+    public static final Exam DEFAULT_EXAM_MYE = new Exam("Mid Year Examination 2020",
+            parseToDate("25/7/2020"), new Score("20/30"));
+    public static final Attendance DEFAULT_ATTENDANCE = new Attendance(parseToDate("14/4/1998"),
+            true, new Feedback("sleepy during lesson"));
 
     // Identity fields
     private Name name;
@@ -56,10 +62,10 @@ public class StudentBuilder {
     private PaymentDate paymentDate;
     private List<Detail> details = new ArrayList<>();
 
-    private List<Question> questions = new ArrayList<>();
-
-    //Academic details
+    // Academic details
     private List<Exam> exams = new ArrayList<>();
+    private List<Attendance> attendances = new ArrayList<>();
+    private List<Question> questions = new ArrayList<>();
 
     /**
      * Creates a {@code StudentBuilder} with the default details.
@@ -68,7 +74,7 @@ public class StudentBuilder {
         name = new Name(DEFAULT_NAME);
         phone = new Phone(DEFAULT_PHONE);
         school = new School(DEFAULT_SCHOOL);
-        year = new Year(DEFAULT_SCHOOL_TYPE, DEFAULT_SCHOOL_LEVEL);
+        year = new Year(DEFAULT_YEAR);
 
         venue = new ClassVenue(DEFAULT_CLASS_VENUE);
         time = new ClassTime(DEFAULT_CLASS_TIME);
@@ -84,7 +90,8 @@ public class StudentBuilder {
                 .map(UnsolvedQuestion::new)
                 .forEach(questions::add);
 
-        exams = Arrays.asList(DEFAULT_EXAM_MYE);
+        exams = List.of(DEFAULT_EXAM_FYE, DEFAULT_EXAM_MYE);
+        attendances = List.of(DEFAULT_ATTENDANCE);
     }
 
     /**
@@ -96,15 +103,17 @@ public class StudentBuilder {
         school = studentToCopy.getSchool();
         year = studentToCopy.getYear();
 
-        Admin studentAdmin = studentToCopy.getAdmin();
-        venue = studentAdmin.getClassVenue();
-        time = studentAdmin.getClassTime();
-        fee = studentAdmin.getFee();
-        paymentDate = studentAdmin.getPaymentDate();
-        details.addAll(studentAdmin.getDetails());
+        venue = studentToCopy.getClassVenue();
+        time = studentToCopy.getClassTime();
+        fee = studentToCopy.getFee();
+        paymentDate = studentToCopy.getPaymentDate();
+        details.addAll(studentToCopy.getDetails());
 
         questions.addAll(studentToCopy.getQuestions());
         exams.addAll(studentToCopy.getExams());
+
+        Academic studentAcademic = studentToCopy.getAcademic();
+        attendances.addAll(studentAcademic.getAttendance());
     }
 
     /**
@@ -135,8 +144,8 @@ public class StudentBuilder {
     /**
      * Sets the {@code Year} of the {@code Student} that we are building.
      */
-    public StudentBuilder withYear(SchoolType schoolType, Integer level) {
-        this.year = new Year(schoolType, level);
+    public StudentBuilder withYear(String year) {
+        this.year = new Year(year);
         return this;
     }
 
@@ -205,12 +214,20 @@ public class StudentBuilder {
     }
 
     /**
+     * Sets some {@code Exam} for the {@code Student} that we are building.
+     */
+    public StudentBuilder withAttendances(Attendance... attendances) {
+        this.attendances = SampleDataUtil.getAttendance(attendances);
+        return this;
+    }
+
+    /**
      * Builds a {@code Student} based on the given information.
      */
     public Student build() {
         return new Student(name, phone, school, year,
-                new Admin(venue, time, fee, paymentDate, details),
-                questions, exams);
+                venue, time, fee, paymentDate, details,
+                questions, exams, attendances);
     }
 
 }
